# Praxo-PICOS

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.cursor/: environment.json
.cursor/prompts/: task-packet.md
.cursor/rules/: 00-global.mdc  10-task-packets.mdc  10-testing.mdc  20-backend.mdc  20-safety-and-gates.mdc  30-frontend.mdc  50-work-sync.mdc  90-agentos-integration.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-e2e.yml  ci-fast.yml  ci-nightly.yml  ci-regression-nightly.yml  ci-regression-pr.yml  macos-release.yml
apps/desktop/: package.json
apps/desktop/src/: docker-manager.js  main.js  permissions.js  preload.js  runtime.js  self-healing.js  self_healing.py  setup.js  supervisor.js  supervisor.py
apps/desktop/src/__tests__/: docker-manager.test.js  runtime.test.js  self-healing.test.js  supervisor.test.js
apps/web/: next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/__tests__/: pages.test.tsx  smoke.test.tsx
apps/web/e2e/: health.spec.ts  memory.spec.ts  navigation.spec.ts  onboarding.spec.ts  settings.spec.ts  smoke.spec.ts  sources.spec.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: glass-card.tsx  learning-placeholder.tsx  mode-provider.tsx  narrative-card.tsx  score-dot.tsx  sidebar.tsx  simple-advanced-toggle.tsx  status-card.tsx
apps/web/src/lib/: analytics-types.ts  api.ts  use-analytics.ts  use-mode.ts
docs/: context-compilation.md  intelligence-domains.md
docs/runbooks/: release.md
docs/standards/: data-quality-standards.md  performance-budgets.md  runtime-contracts.md  self-healing-policy.md  testing-strategy.md
infra/docker/: docker-compose.yml
packaging/: assemble_app.sh  entitlements.plist  import_certs.sh  notarize_and_staple.sh  rebrand_frameworks.sh  sign_and_package.sh
scripts/: backfill_meeting_intelligence.py  check-regression-monotonicity.sh  install.sh  picos
services/api/src/praxo_picos_api/: health.py  main.py
tests/: conftest.py
tests/contracts/: test_readme_mentions_runtime_contracts.py  test_release_metadata.py
tests/regression/: test_chat_api.py  test_detect_api.py  test_ports_do_not_match_memoryos_defaults.py
tests/regression/data_quality/: test_extraction_contracts.py  test_golden_fixtures.py
tests/regression/performance/: test_perf_baselines.py
tests/regression/self_healing/: test_service_recovery.py
tests/unit/python/: test_attention_energy.py  test_bug_fixes.py  test_config.py  test_context_predictive.py  test_daily_brief.py  test_data_flow_monitor.py  test_db.py  test_enrichment.py  test_extractors.py  test_health.py  test_hypothesis_port_contracts.py  test_indexing.py  test_intelligence.py  test_mcp.py  test_meeting_delivery.py  test_models.py  test_narrative.py  test_normalizer.py  test_relationship_dynamics.py  test_runtime_contracts.py  test_screenpipe_deep.py  test_search.py  test_sources_api.py
(+83 files in other folders)
